--- a/fkm-checkup/index.html
+++ b/fkm-checkup/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>パーソナルデザイン診断ツール</title>
+    <title>スワイプ診断精度チェック！</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
