ボタン配置・デザイン用CSS追加、およびHTML反映

--- a/fkm-checkup/index.html
+++ b/fkm-checkup/index.html
@@ -36,10 +36,12 @@
                         <p><a id="productLink" href="#" target="_blank" class="product-link">商品詳細はこちら</a></p>
                     </div>
                 </div>
-                <div class="buttons" id="actionButtons">
+                <div class="buttons-group" id="actionButtons">
+                  <div class="like-dislike-row">
                     <button class="dislike" id="dislikeBtn">×</button>
                     <button class="like" id="likeBtn">👍</button>
-                    <button class="skip" id="skipBtn">スキップ</button>
+                  </div>
+                  <button class="skip" id="skipBtn">スキップ</button>
                 </div>
                 
             </div>
